--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Personal Website</title>
+        <title>Jack Keller</title>
     </head>
     <body>
-        <h1>Welcome to My Website!</h1>
-        <p>This is my personal GitHub Pages site.</p>
+        <h1>Jack Keller</h1>
+        <p>Personal site.</p>
     </body>
 </html>
