--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 <body>
   <header>
     <h1>Jack R. Keller</h1>
-    <p>Modeling & Simulation | Sustainability | City Planning | AI for Societal Good</p>
+    <p>Computer Science | Modeling & Simulation | Artificial Intelligence</p>
+    <p>Atlanta, GA 📍</p>
   </header>
 
   <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, taught at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
+    <h2>About Me 👋</h2>
+    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 75%; height: 75%; border-radius: 8px; margin-bottom: 1em;">
+    <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
   </section>
 
   <section id="interests">
-    <h2>What I'm Looking For</h2>
+    <h2>My Interests 🌎</h2>
     <p>I'm passionate about leveraging software and simulation to improve cities, sustainability, and quality of life. I'm especially drawn to solving hard systems problems in government, infrastructure, and civic tech—places where rigorous modeling can make a real difference for communities.</p>
   </section>
 
   <section id="projects">
-    <h2>Projects</h2>
+    <h2>Projects 💻</h2>
     <div class="carousel">
       <button class="nav left" onclick="moveSlide(-1)">&#10094;</button>
       <div class="carousel-track">
@@ -49,7 +51,9 @@
   </section>
 
   <footer>
-    <p>Connect with me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | jackrobert0627@outlook.com</p>
+    <p>Connect with me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
+    <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
+    <p><a href="https://github.com/JackKeller27">GitHub</a></p>
   </footer>
 </body>
 </html>
