--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section id="about">
     <h2>About Me 👋</h2>
-    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 75%; height: 75%; border-radius: 8px; margin-bottom: 1em;">
+    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 30%; height: 20%; border-radius: 8px; margin-bottom: 1em;">
     <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
   </section>
 
@@ -53,7 +53,14 @@
   <footer>
     <p>Connect with me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
     <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
-    <p><a href="https://github.com/JackKeller27">GitHub</a></p>
+    <p style="text-align: center;">
+      <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
+      GitHub
+      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
+      </a>
+    </p>
+      </a>
+    </p>
   </footer>
 </body>
 </html>
