--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section id="about">
     <h2>About Me 👋</h2>
-    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 100%; height: 5%; border-radius: 8px; margin-bottom: 1em;">
+    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 300px; height: 100px; border-radius: 8px; margin-bottom: 1em;">
     <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
   </section>
 
