fixed photo hopefully

--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
     <p>Atlanta, GA 📍</p>
   </header>
 
-  <section id="about">
-    <h2>About Me 👋</h2>
-    <img src="grad_pic.jpeg" alt="Portrait Photo" style="max-width: 300px; height: 100px; border-radius: 8px; margin-bottom: 1em;">
-    <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
-  </section>
+  <section id="about" style="display: flex; align-items: center; gap: 2em;">
+    <div style="flex: 2;">
+      <h2>About Me 👋</h2>
+      <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
+    </div>
+    <img src="Headshot.jpg" alt="Portrait Photo" style="flex: 1; width: 220px; height: 220px; border-radius: 16px; margin-bottom: 0; object-fit: contain;">
+    </section>
+    <style>
+    body {
+      margin-left: 2vw;
+      margin-right: 2vw;
+    }
+    </style>
 
   <section id="interests">
     <h2>My Interests 🌎</h2>
@@ -51,7 +59,7 @@
   </section>
 
   <footer>
-    <p>Connect with me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
+    <p>Contact me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
     <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
     <p style="text-align: center;">
       <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
