--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
       <h2>About Me 👋</h2>
       <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
     </div>
-    <img src="Headshot.jpg" alt="Portrait Photo" style="flex: 1; width: 220px; height: 220px; border-radius: 16px; margin-bottom: 0; object-fit: contain;">
+    <img src="Headshot.jpg" alt="Portrait Photo" style="flex: 1; width: 220px; height: 220px; border-radius: 5%; margin-bottom: 0; object-fit: contain;">
     </section>
-    <style>
+    <!-- <style>
     body {
-      margin-left: 2vw;
-      margin-right: 2vw;
+      margin-left: 1vw;
+      margin-right: 1vw;
     }
-    </style>
+    </style> -->
+
+  <hr class="section-divider">
 
   <section id="interests">
     <h2>My Interests 🌎</h2>
     <p>I'm passionate about leveraging software and simulation to improve cities, sustainability, and quality of life. I'm especially drawn to solving hard systems problems in government, infrastructure, and civic tech—places where rigorous modeling can make a real difference for communities.</p>
   </section>
+
+  <hr class="section-divider">
 
   <section id="projects">
     <h2>Projects 💻</h2>
