--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
 
   <!-- Sticky Footer -->
   <footer class="sticky-footer">
-    <p>Jack R. Keller</p>
+    <p>
+      <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a> | <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
+      GitHub
+      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
+      </a>
+    </p>
+    <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
+    <!-- <p style="text-align: center;">
+      <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
+      GitHub
+      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
+      </a>
+    </p> -->
   </footer>
 
   <section id="about" class="fade-in">
@@ -63,7 +75,7 @@
     </div>
   </section>
 
-  <footer class="main-footer">
+  <!-- <footer class="main-footer">
     <p>Contact me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
     <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
     <p style="text-align: center;">
@@ -72,6 +84,6 @@
       <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
       </a>
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
