fixed scrolling perhaps

--- a/index.html
+++ b/index.html
@@ -5,52 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jack Keller Portfolio</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <!-- Hero Section -->
-  <section class="hero">
+  <section class="section" id="hero">
     <h1>Jack R. Keller</h1>
   </section>
 
-  <!-- Sticky Header -->
-  <header class="sticky-header">
-    <h1>Jack R. Keller</h1>
-  </header>
-
-  <!-- Sticky Footer -->
-  <footer class="sticky-footer">
-    <p>
-      <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a> | <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
-      GitHub
-      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
-      </a>
-    </p>
-    <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
-    <!-- <p style="text-align: center;">
-      <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
-      GitHub
-      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
-      </a>
-    </p> -->
-  </footer>
-
-  <section id="about" class="fade-in">
+  <!-- About Section -->
+  <section class="section" id="about">
     <h2>About Me 👋</h2>
     <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
-    <img src="Headshot.jpg" alt="Portrait Photo" style="width: 220px; height: 220px; border-radius: 5%; object-fit: contain;">
+    <img src="Headshot.jpg" alt="Portrait Photo" class="portrait">
   </section>
 
-  <hr class="section-divider">
-
-  <section id="interests" class="fade-in">
+  <!-- Interests Section -->
+  <section class="section" id="interests">
     <h2>My Interests 🌎</h2>
     <p>I'm passionate about leveraging software and simulation to improve cities, sustainability, and quality of life. I'm especially drawn to solving hard systems problems in government, infrastructure, and civic tech—places where rigorous modeling can make a real difference for communities.</p>
   </section>
 
-  <hr class="section-divider">
-
-  <section id="projects" class="fade-in">
+  <!-- Projects Section -->
+  <section class="section" id="projects">
     <h2>Projects 💻</h2>
     <div class="carousel">
       <button class="nav left" onclick="moveSlide(-1)">&#10094;</button>
@@ -75,15 +52,11 @@
     </div>
   </section>
 
-  <!-- <footer class="main-footer">
+  <!-- Main Footer -->
+  <footer class="main-footer">
     <p>Contact me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
     <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
-    <p style="text-align: center;">
-      <a href="https://github.com/JackKeller27" style="display: inline-flex; align-items: center;">
-      GitHub
-      <img src="github_icon.png" alt="GitHub" style="vertical-align: middle; width: 20px; height: 20px; margin-left: 6px;">
-      </a>
-    </p>
-  </footer> -->
+    <p><a href="https://github.com/JackKeller27">GitHub</a></p>
+  </footer>
 </body>
 </html>
