--- a/index.html
+++ b/index.html
@@ -11,13 +11,21 @@
   <!-- Hero Section -->
   <section class="section" id="hero">
     <h1>Jack R. Keller</h1>
+    <p style="text-align: center;">
+      Computer Science | Modeling &amp; Simulation | Artificial Intelligence<br>
+      Atlanta, GA 📍
+    </p>
   </section>
 
   <!-- About Section -->
   <section class="section" id="about">
     <h2>About Me 👋</h2>
-    <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
-    <img src="Headshot.jpg" alt="Portrait Photo" class="portrait">
+    <div style="display: flex; align-items: flex-start; gap: 2rem;">
+      <div style="flex: 1;"></div>
+        <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
+        <img src="Headshot.jpg" alt="Portrait Photo" class="portrait" style="max-width: 200px; border-radius: 12px; object-fit: cover; align-self: flex-start;">
+      </div>
+    </div>
   </section>
 
   <!-- Interests Section -->
@@ -52,11 +60,12 @@
     </div>
   </section>
 
-  <!-- Main Footer -->
+  <!-- Main Footer
   <footer class="main-footer">
     <p>Contact me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
     <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
     <p><a href="https://github.com/JackKeller27">GitHub</a></p>
   </footer>
+  -->
 </body>
 </html>
