--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 <body>
   <!-- Hero Section -->
   <section class="section" id="hero">
-    <h1>Jack R. Keller</h1>
+    <h1>Jack Keller</h1>
     <p style="text-align: center;">
-      Computer Science | Modeling &amp; Simulation | Artificial Intelligence<br>
-      Atlanta, GA 📍
+      Computer Science | Modeling &amp; Simulation | Artificial Intelligence
+      <br><br>
+      Atlanta, GA
     </p>
+    <div class="down-arrow"></div>
   </section>
 
   <!-- About Section -->
   <section class="section" id="about">
-    <h2>About Me 👋</h2>
+    <h2>About Me</h2>
     <div style="display: flex; align-items: flex-start; gap: 2rem;">
       <div style="flex: 1;"></div>
         <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
@@ -30,28 +32,28 @@
 
   <!-- Interests Section -->
   <section class="section" id="interests">
-    <h2>My Interests 🌎</h2>
+    <h2>My Interests</h2>
     <p>I'm passionate about leveraging software and simulation to improve cities, sustainability, and quality of life. I'm especially drawn to solving hard systems problems in government, infrastructure, and civic tech—places where rigorous modeling can make a real difference for communities.</p>
   </section>
 
   <!-- Projects Section -->
   <section class="section" id="projects">
-    <h2>Projects 💻</h2>
+    <h2>Projects</h2>
     <div class="carousel">
       <button class="nav left" onclick="moveSlide(-1)">&#10094;</button>
       <div class="carousel-track">
         <div class="project active">
-          <img src="images/kapyong.jpg" alt="Kapyong Simulation">
+          <img src="projects/kapyong.jpg" alt="Kapyong Simulation">
           <h3>Battle of Kapyong Defense Simulation</h3>
           <p>Agent-based model exploring terrain-weapon tradeoffs in military defense. Presented findings to professors, generals, and officials.</p>
         </div>
         <div class="project">
-          <img src="images/car-classifier.jpg" alt="Car Classifier">
+          <img src="projects/car-classifier.jpg" alt="Car Classifier">
           <h3>Car Image Classification</h3>
           <p>Used CNN and PCA to classify car models from images with ~88% accuracy. Employed PyTorch and data augmentation techniques.</p>
         </div>
         <div class="project">
-          <img src="images/campus-portal.jpg" alt="Campus Portal">
+          <img src="projects/campus-portal.jpg" alt="Campus Portal">
           <h3>Campus Discovery Portal</h3>
           <p>Full-stack React + Java Spring Boot portal to help students discover organizations and events on campus. Built with Scrum methodology.</p>
         </div>
@@ -60,12 +62,5 @@
     </div>
   </section>
 
-  <!-- Main Footer
-  <footer class="main-footer">
-    <p>Contact me: <a href="https://www.linkedin.com/in/jack-robert-keller/">LinkedIn</a> | <a href="mailto:jackrobert0627@outlook.com">jackrobert0627@outlook.com</a></p>
-    <p><a href="Jack-Keller-Resume.pdf" download>Download My Resume</a></p>
-    <p><a href="https://github.com/JackKeller27">GitHub</a></p>
-  </footer>
-  -->
 </body>
 </html>
