fixing project height

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <br><br>
       Atlanta, GA
     </p>
-    <div class="down-arrow"></div>
+    <!-- <div class="down-arrow"></div> -->
   </section>
 
   <!-- About Section -->
