--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@
       <br><br>
       Atlanta, GA
     </p>
-    <!-- <div class="down-arrow"></div> -->
+    <div class="down-arrow">▼</div>
   </section>
 
   <!-- About Section -->
   <section class="section" id="about">
     <h2>About Me</h2>
     <div style="display: flex; align-items: flex-start; gap: 2rem;">
-      <div style="flex: 1;"></div>
-        <p>I'm a Master's student in Computer Science at Georgia Tech (4.0 GPA), specializing in Modeling and Simulation. With concentrations in Intelligence (AI) and a minor in Sustainable Cities, I've interned at Honeywell and J.J. Keller & Associates, TA'd at Georgia Tech, and conducted field research in Puerto Rico on post-disaster recovery. I love using code to explore, explain, and improve complex systems.</p>
+      <div style="flex: 1;">
+        <p>
+          Hello! My name is Jack Keller, and I’m a Master’s student at Georgia Tech studying computer science and specializing in Modeling & Simulation. I graduate this December, and I’m currently pursuing full-time software engineering roles beginning as early as January 2026.
+          <br><br>
+          As a technical yet people-oriented person, I find deep fulfillment in helping others learn and succeed. My education, alongside several software engineering internships at J.J. Keller &amp; Associates, Inc. and Honeywell, have provided me with a strong computer science foundation—particularly in modeling, simulation, and AI. However, I believe what really sets me apart is my ability to break down complex concepts into clear and comprehensible terms, helping others understand and grow too. Whether TAing Algorithms and Computer Organization and Programming at Georgia Tech for over 2 years, or conducting post-disaster research in Puerto Rico to help communities recover faster, I’ve learned that my passion truly lies in utilizing technology to improve people's lives and society as a whole.
+          <br><br>
+          The purpose of this site is to showcase a bit of my experience, what I’m passionate about, and some of the projects I’m most proud of. If you’d like to get in touch, please see my contact info below and reach out!
+        </p>
+      </div>
         <img src="Headshot.jpg" alt="Portrait Photo" class="portrait" style="max-width: 200px; border-radius: 12px; object-fit: cover; align-self: flex-start;">
       </div>
     </div>
+    <div class="down-arrow">▼</div>
   </section>
 
   <!-- Interests Section -->
   <section class="section" id="interests">
     <h2>My Interests</h2>
     <p>I'm passionate about leveraging software and simulation to improve cities, sustainability, and quality of life. I'm especially drawn to solving hard systems problems in government, infrastructure, and civic tech—places where rigorous modeling can make a real difference for communities.</p>
+    <div class="down-arrow">▼</div>
   </section>
 
   <!-- Projects Section -->
