--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jack Keller Portfolio</title>
+  <title>Jack Keller</title>
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 </head>
@@ -22,15 +22,14 @@
   <!-- About Section -->
   <section class="section" id="about">
     <h2>About Me</h2>
-    <div style="display: flex; align-items: flex-start; gap: 2rem;">
-      <div style="flex: 1;">
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 2rem;">
+      <img src="Headshot.jpg" alt="Portrait Photo" class="portrait" style="max-width: 200px; border-radius: 12px; object-fit: cover; object-position: top;">
+      <div style="max-width: 600px;">
         <p>
           Hello! My name is Jack Keller, and I’m a Master’s student at Georgia Tech studying computer science and specializing in Modeling & Simulation. I graduate this December, and I’m currently pursuing full-time software engineering roles beginning as early as January 2026.
           <br><br>
           The purpose of this site is to showcase a bit of my experience, what I’m passionate about, and some of the projects I’m most proud of. If you’d like to get in touch, please see below and reach out!
         </p>
-      </div>
-        <img src="Headshot.jpg" alt="Portrait Photo" class="portrait" style="max-width: 200px; border-radius: 12px; object-fit: cover; align-self: flex-start;">
       </div>
     </div>
     <div class="down-arrow">▼</div>
@@ -47,7 +46,7 @@
       I believe what truly sets me apart is my ability to break down complex concepts into clear, comprehensible terms to help others learn and succeed — a skill I’ve honed over five semesters as a <strong>Teaching Assistant</strong> for Computer Organization &amp; Programming (CS 2110) and Algorithms (CS 3510/11) at GT. I'm very excited to lead Algorithms as <strong>Head TA</strong> in Fall 2025!
       </p>
       <p>
-      My primary interests lie in <strong>modeling and simulation</strong> and <strong>artificial intelligence</strong>. I am especially passionate about applying these technologies to infrastructure and systems, urban planning, and sustainability to improve people’s lives and society as a whole.
+      My primary interests lie in <strong>modeling and simulation</strong> and <strong>artificial intelligence</strong>. I'm especially passionate about applying these technologies to infrastructure and systems, urban planning, and sustainability to improve people’s lives and society as a whole.
       </p>
     </div>
     <div class="down-arrow">▼</div>
