--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
           <p>Agent-based model exploring terrain-weapon tradeoffs in military defense. Presented findings to professors, generals, and industry professionals.</p>
         </div>
         <div class="project">
-          <img src="projects/car-classification.jpg" alt="ML Car Classifier">
+          <img src="projects/car-classification.png" alt="ML Car Classifier">
           <h3>Car Image Classification</h3>
           <p>Used a Convolutional Neural Net along with Principal Component Analysis (PCA) to classify car models from images with ~88% accuracy. Built with TensorFlow and the cars196 dataset. </p>
         </div>
         <div class="project">
-          <img src="projects/campus-portal.jpg" alt="Campus Discovery Portal">
+          <img src="projects/campus-discovery-portal.png" alt="Campus Discovery Portal">
           <h3>Campus Discovery Portal</h3>
           <p>Developed a full-stack React + Java Spring Boot application to help students discover organizations and events on campus. Followed Scrum methodology on a small team.</p>
         </div>
