--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Experience and Interests Section -->
   <section class="section" id="experience">
     <h2>Experience and Interests</h2>
-    <div class="experience-content">
+    <div class="experience-content" style="max-width: 600px;">
       <p></p>
       My experience includes several software engineering internships at <strong>J.J. Keller &amp; Associates, Inc.</strong> and <strong>Honeywell</strong>, as well as research with the <strong>Robotic Musicianship Lab</strong> and <strong>Puerto Rico Planning Studio</strong> (focused on post-disaster recovery) at Georgia Tech.
       </p>
